# neurl-ips-2023-machine-unlearning

./: Jenkinsfile  README.md  pyproject.toml
.github/: pull_request_template.md
age_unlearning/: machine-unlearning-finetune.ipynb
docker/: requirements_ci.txt
docker/jenkins/: Dockerfile
docker/local/: Dockerfile
scripts/: docker_dev_run.sh  lint_check.sh  run_test.sh
